# frontend

./: .env  Cargo.toml
.cargo/: config.toml
pkg/static/: style.css
src/: error_views.rs  errors.rs  main.rs
src/capsules/: navbar.rs
src/common/: mod.rs
src/components/: file_selector.rs  ingredient_list.rs  layout.rs  login.rs  mod.rs  recipe_form.rs
src/templates/: mod.rs  new_recipe.rs  recipe.rs  shorts.rs  update_recipe.rs
static/: style.css
