[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.0-beta.17", features = [ "hydrate", "rx-collections" ] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
gloo-net = "0.2.6"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.68"
lazy_static = "1.4.0"
clap = { version = "4.0", features = ["derive"] }
web-sys = { version = "0.3.4", features = ["HtmlFormElement", "HtmlDialogElement", "Window", "Document"]}

# Engine-only dependencies go here
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-warp = { version = "=0.4.0-beta.17", features = [ "dflt-server" ] }

# Browser-only dependencies go here
[target.'cfg(target_arch = "wasm32")'.dependencies]
