[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.0-beta.22", features = [ "hydrate", "rx-collections" ] }
sycamore = "^0.8.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
gloo-net = { version = "0.2.6", features = ["http"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.38"
lazy_static = "1.4.0"
web-sys = { version = "0.3.4", features = ["FormData", "Request", "Headers", "RequestMode", "RequestInit", "FileReader", "Node", "Blob", "HtmlImageElement", "Url", "Element", "File", "FileList", "HtmlDivElement", "HtmlInputElement", "HtmlFormElement", "HtmlDialogElement", "Window", "Document"]}
dotenvy = "0.15.6"
reqwest-wasm = "0.11.16"
js-sys = "0.3.61"
anyhow = "1.0.69"

# Engine-only dependencies go here
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "=0.4.0-beta.22", features = [ "dflt-server" ] }

# Browser-only dependencies go here
[target.'cfg(target_arch = "wasm32")'.dependencies]
